fix: added the uploading and changed schema for posts⚙️ and moved the video handler
